# galuppi-perez

./: .gitignore  .ignore  .venv  README.md  dust  install.sh  lsyncd.conf  pyproject.toml  run.sh  suspect_arias.pkl
data/: config_extraction.yml  config_extractor.yml  config_postprocess.yml  config_processor.yml  extraction_alldata.csv  extraction_features.csv  extraction_labels.csv  extraction_metadata.csv
data/cache/: Ale01M-E_prezzo-1738-Galuppi[1.01][1262].pkl  Ale01M-E_prezzo-1749-Perez[1.01][1341].pkl  Ale01M-E_prezzo-1755-Galuppi[1.01][0668].pkl  Ale03M-Vil_trofeo-1738-Galuppi[1.03][1266].pkl  Ale04M-Chi_vive-1738-Galuppi[1.04][1267].pkl  Ale04M-Chi_vive-1749-Perez[1.04][1344].pkl  Ale04M-Chi_vive-1752-Perez[1.04][1056].pkl  Ale04M-Chi_vive-1755-Perez[1.04][0692].pkl  Ale06M-Se_mai-1738-Galuppi[1.06][1274].pkl  Ale06M-Se_mai-1749-Perez[1.06][1350].pkl  Ale06M-Se_mai-1752-Perez[1.06][1058].pkl  Ale06M-Se_mai-1755-Galuppi[1.06][0673].pkl  Ale06M-Se_mai-1755-Perez[1.06][0694].pkl  Ale08M-Se_possono-1749-Perez[1.09][1351].pkl  Ale08M-Se_possono-1752-Perez[1.09][1061].pkl  Ale10M-Voi_che-1749-Perez[1.11][1370].pkl  Ale10M-Voi_che-1755-Perez[1.10][0696].pkl  Ale11M-Se_amore-1749-Perez[1.15][1371].pkl  Ale11M-Se_amore-1752-Perez[1.15][1064].pkl  (+81 more)
dustenv/: common.sh
internal_data/: Passions.csv  characters_gender.csv  errors.csv
modeling/: __init__.py  __main__.py  conf_matrix_hack.py  data.py  didone_automl.py  easy_tools.py  grid_tuning.py  inspection.py  model_wrappers.py  plotting.py  post_analysis.py  rebalance.py  settings.py  show_models.py  validation.py
(+699 files in other folders)
